# Tinker_r2e-gym

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build-images.yaml
cluster/: cluster.yaml
configs/: grpo.yaml
docker/: Dockerfile.orchestrator  Dockerfile.proxy
docs/: eval-guide.md  local-eval-guide.md
helm/r2e-eks/: Chart.yaml  values-tinker.yaml  values-training.yaml  values.yaml
helm/r2e-eks/templates/: _helpers.tpl  configmap.yaml  orchestrator-deployment.yaml  proxy-deployment.yaml  proxy-service.yaml  rbac.yaml  sandbox-configmap.yaml  sandbox-networkpolicy.yaml  vllm-deployment.yaml  vllm-service.yaml
helm/r2e-tinker/: Chart.yaml  values-training.yaml  values-vllm.yaml  values.yaml
helm/r2e-tinker/templates/: _helpers.tpl  configmap.yaml  orchestrator-deployment.yaml  proxy-deployment.yaml  proxy-service.yaml  rbac.yaml  sandbox-configmap.yaml  sandbox-networkpolicy.yaml  vllm-deployment.yaml  vllm-service.yaml
helm/tinker-r2egym/: Chart.yaml  values-inference.yaml  values-training.yaml  values.yaml
helm/tinker-r2egym/templates/: _helpers.tpl  configmap.yaml  orchestrator-deployment.yaml  proxy-deployment.yaml  proxy-service.yaml  rbac.yaml  sandbox-configmap.yaml  sandbox-networkpolicy.yaml  secrets.yaml
patches/: k8s_security_context.py
scripts/: build-and-push.sh  download-results.sh  setup-cluster.sh
src/r2e_eks/common/: s3.py
src/r2e_eks/eval/: run.py
src/r2e_eks/inference/: proxy.py
src/tinker_r2egym/: run_eval.py  s3_sync.py  tinker_grpo.py  tinker_proxy.py
(+1 files in other folders)
