[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinker-r2egym"
version = "0.1.0"
description = "Tinker GRPO training and inference proxy for R2E-Gym"
requires-python = ">=3.10"
dependencies = [
    "tinker",
    "pyyaml",
    "fire",
    "datasets",
    "transformers",
    "python-dotenv",
    "boto3",
]

[project.scripts]
tinker-grpo = "tinker_r2egym.tinker_grpo:main"
tinker-proxy = "tinker_r2egym.tinker_proxy:main"
tinker-eval = "tinker_r2egym.run_eval:main"

[tool.setuptools.packages.find]
where = ["src"]
