[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "r2e-eks"
version = "0.1.0"
description = "R2E-Gym on EKS — evaluation and training runner"
requires-python = ">=3.10"
dependencies = [
    "tinker",
    "pyyaml",
    "fire",
    "datasets",
    "transformers",
    "python-dotenv",
    "boto3",
]

[project.scripts]
r2e-train = "r2e_eks.training.grpo:main"
r2e-proxy = "r2e_eks.inference.proxy:main"
r2e-eval  = "r2e_eks.eval.run:main"

[tool.setuptools.packages.find]
where = ["src"]
